@startuml

    class Instate {
        - funding : int
        + Instate()
        + isValid()
        {static} + main()
        + toString()
        + tuitionDue()
    }


    class International {
        {static} - CREDIT_MIN : int
        - exchange : boolean
        + International()
        + isValid()
        {static} + main()
        + toString()
        + tuitionDue()
    }


    class Outstate {
        - tristate : boolean
        + Outstate()
        + isValid()
        {static} + main()
        + toString()
        + tuitionDue()
    }


    abstract class Student {
        # FULL_TIME_CREDIT_MIN : int
        # FULL_TIME_FEE : int
        # MAX_BILLABLE_CREDITS : int
        # PART_TIME_FEE : int
        # credit : int
        - fName : String
        - lName : String
        + Student()
        + compareTo()
        + toString()
        {abstract} + tuitionDue()
    }


    class StudentList {
        - capacity : int
        - size : int
        - students : Student[]
        + StudentList()
        + add()
        + contains()
        + getSize()
        + remove()
        + remove()
        + show()
        - grow()
    }


    class TuitionManager {
        {static} + main()
        {static} - createInstateFromInput()
        {static} - createInternationalFromInput()
        {static} - createOutstateFromInput()
    }


  Instate -up-|> Student
  International -up-|> Student
  Outstate -up-|> Student
  Student .up.|> java.lang.Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
